[package]
name = "make-lock-img"
version = "0.1.0"
authors = ["taylor <taylor@jennifersoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
imageproc = "0.21"
x11 = { version = "2.18", features=["xlib"]}
rusttype = "0.9.2"
rand = "0.7.3"
